Changes the index file

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -4,7 +4,7 @@
         <%= image_tag("logo.svg", :alt => "logo", :class => "logo") %>
         <%= button_tag("Личный кабинет", type: "button", class: "login") %>
         <div class="email"><a href="mailto:info@xmerch.ru">info@xmerch.ru</a></div>
-        <div class="phone">+7 (916) 411 44 44</div>
+        <div class="phone">8 (926) 647-48-15</div>
     </div>
 </header>
 <!-- 1st section "Promo" -->
@@ -140,7 +140,7 @@
         <%= image_tag("logo_bw.svg", :alt => "logo_black_and_white", :class => "logo") %>
     
         <div class="footer_block">
-            <div class="phone">+7 (916) 411 44 44</div>
+            <div class="phone">8 (926) 647-48-15</div>
             <div class="email"><a href="mailto:info@xmerch.ru">info@xmerch.ru</a></div>
             <div class="copyright">Xmerch &copy; 2015</div>
         </div>
