--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -61,7 +61,7 @@
         </div>
         <div class="uniq_item">
             <%= image_tag("icons/icon_5.svg", :alt => "icon_5", :class => "icon", :id => "icon_5") %>
-            <p>Не нужно контролировать общение только с&nbsp;менеджером Xmerch</p>
+            <p>Удобный контроль через менеджера Xmerch</p>
         </div>
         <div class="uniq_item">
             <%= image_tag("icons/icon_6.svg", :alt => "icon_6", :class => "icon", :id => "icon_6") %>
