Changes some files for checking autorestart of passenger

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -117,23 +117,23 @@
     </div>
 </section>
 <!-- 5th block "Callback" -->
-<!--<section class="callback" id="callback">-->
-<!--    <div class="wrapper">-->
-<!--        <div class="promo_phrase">Связаться с&nbsp;&nbsp;нами просто!</div>-->
-<!--        <div class="form">-->
-<!--            <input type="text" name="name" placeholder="Имя" -->
-<!--                onfocus="this.placeholder = ''" -->
-<!--                onblur="this.placeholder = 'Имя'">-->
-<!--            <input type="tel" name="phone" placeholder="Телефон" -->
-<!--                onfocus="this.placeholder = ''" -->
-<!--                onblur="this.placeholder = 'Телефон'">-->
-<!--            <input type="email" name="email" placeholder="E-mail" -->
-<!--                onfocus="this.placeholder = ''" -->
-<!--                onblur="this.placeholder = 'E-mail'">-->
-<!--            <input type="submit" value="Связаться">-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
+<section class="callback" id="callback">
+    <div class="wrapper">
+        <div class="promo_phrase">Связаться с&nbsp;&nbsp;нами просто!</div>
+        <div class="form">
+            <input type="text" name="name" placeholder="Имя" 
+                onfocus="this.placeholder = ''" 
+                onblur="this.placeholder = 'Имя'">
+            <input type="tel" name="phone" placeholder="Телефон" 
+                onfocus="this.placeholder = ''" 
+                onblur="this.placeholder = 'Телефон'">
+            <input type="email" name="email" placeholder="E-mail" 
+                onfocus="this.placeholder = ''" 
+                onblur="this.placeholder = 'E-mail'">
+            <input type="submit" value="Связаться">
+        </div>
+    </div>
+</section>
 <!-- footer -->
 <footer>
     <div class="wrapper">
