--- a/app/views/notifier/send_email.html.erb
+++ b/app/views/notifier/send_email.html.erb
@@ -1,5 +1,5 @@
-<h1>Notifier#send_email</h1>
+<h1>Новый запрос</h1>
 
-<p>
-  <%= @greeting %>, find me in app/views/notifier/send_email.html.erb
-</p>
+<p><b>Имя: </b><%= @name %></p>
+<p><b>Телефон: </b><%= @phone %></p>
+<p><b>E-mail: </b><%= @email %></p>
