Finishes mail sending from callback form. Adds html5 validations for this form.

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -402,6 +402,9 @@ header {
             color: white;
             margin-top: 29px;
             outline: none;
+            &:focus:invalid:after {
+                content: 'asdf';
+            }
             &[type="submit"] {
                 background-color: $yellow;
                 width: 100%;
