--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -126,9 +126,9 @@
               :onfocus => "this.placeholder=''", 
               :onblur => "this.placeholder='Имя'" %>
           <%= phone_field_tag 'phone', nil, placeholder: 'Телефон', 
-              title: '8-9XX-XXX-XX-XX',
+              title: '+7 (XXX) XXX-XX-XX',
               :required => true,
-              :pattern => '^8-9\d{2}-\d{3}-\d{2}-\d{2}$',
+              :pattern => '^\+7\s\(\d{3}\)\s\d{3}-\d{2}-\d{2}$',
               :onfocus => "this.placeholder=''", 
               :onblur => "this.placeholder='Телефон'"%>
           <%= email_field_tag 'email', nil, placeholder: 'E-mail',
