--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -396,6 +396,7 @@ header {
         padding: 0;
     }
     .form {
+        display: block;
         margin-left: 120px;
         margin-top: 20px;
         width: 220px;
@@ -411,9 +412,6 @@ header {
             color: white;
             margin-top: 29px;
             outline: none;
-            &:focus:invalid:after {
-                content: 'asdf';
-            }
             &[type="submit"] {
                 background-color: $yellow;
                 width: 100%;
@@ -427,6 +425,33 @@ header {
                 }
             }
         }
+    }
+    #form_success {
+        display: none;
+        margin-left: 120px;
+        margin-top: 20px;
+        width: 280px;
+        float: left;
+        color: white;
+        text-align: center;
+        p:first-of-type {
+            font-size: 25px;
+        }
+        p {
+            font-size: 20px;
+            line-height: 30px;
+        }
+    }
+    #form_error {
+        display: none;
+        margin-left: 120px;
+        margin-top: 20px;
+        width: 280px;
+        float: left;
+        color: white;
+        text-align: center;
+        font-size: 20px;
+        line-height: 30px;
     }
 }
 // footer
