Removes btn Личный кабинет from header

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,7 +2,7 @@
 <header>
     <div class="wrapper">
         <%= image_tag("logo.svg", :alt => "logo", :class => "logo") %>
-        <%= button_tag("Личный кабинет", type: "button", class: "login") %>
+        <!--<%= button_tag("Личный кабинет", type: "button", class: "login") %>-->
         <div class="email"><a href="mailto:info@xmerch.ru">info@xmerch.ru</a></div>
         <div class="phone">8 (926) 647-48-15</div>
     </div>
