--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,13 @@
 <html>
 <head>
   <title>Xmerch</title>
+  <meta name="keywords" content="xmerch, мерчендайзинг, паллетный, выкладка, торговый, иксмерч">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   
   <link href='https://fonts.googleapis.com/css?family=Roboto:500,300,100' rel='stylesheet' type='text/css'>
+  
 </head>
 <body>
   <% flash.each do |name, msg| %>
